--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>RAMBook</title>
+        <title>SIGKA</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="navbar navbar-inverse" role="navigation">
                 <div class="navbar-header">
-                    <span class="navbar-brand">RAMBook</span>
+                    <img src="styles/sigka-logo.png" id="logo">
                 </div>
 
                 <div class="navbar-form navbar-right hidden" id="frm-join">
@@ -37,6 +37,16 @@
                     <div id="not-logged">
                         <h2>Você precisa se conectar</h2>
                         <h3>Digite seu nome e clique em "Entrar"</h3>
+                        <div id="video">
+                            <img src="styles/sigka.gif" width="300px" height="150px">
+                        </div>
+                        <div id="placa">
+                            <li>
+                            <p>MAX - FRONTEND CEO</p>
+                            <p>RAMON - BACKEND CEO</p>
+                        </li>
+                            
+                        </div>
                     </div>
 
                     <div id="logged" class="hidden">
